# Tobias

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Ai.cpp.26FC1B551F0F1FD2.idx  Ai.h.B87880896FE5326B.idx  acmod.c.4703F4A48414F183.idx  acmod.h.E6306C6D884A2F94.idx  agc.c.1ED08C632679B2E6.idx  agc.h.41D91ACA9DD9D458.idx  alignment.h.4894112B768B0840.idx  allphone_search.c.5D028388FD26DF73.idx  allphone_search.h.143117F00825EECA.idx  bin_mdef.c.4F987A9720F17FB6.idx  bin_mdef.h.5D77F20DA619C10A.idx  bio.c.576FC8A0DB457688.idx  bio.h.309C1B41EDA74713.idx  bitarr.c.27908FA9C6CDB587.idx  bitarr.h.CEEC7A6C491360BA.idx  bitvec.c.EB8C73CE12C48024.idx  bitvec.h.AB3B35BBFF639147.idx  blas_lite.c.C6593A44202F33EB.idx  blkarray_list.c.F759ED9B946554CF.idx  blkarray_list.h.286F417E7B732713.idx  byteorder.h.CF3171E5C59302A8.idx  c_api.h.CCC491ECB2AAF3B7.idx  c_api_macros.h.310746B18E7C9EA4.idx  case.c.8E267F4B285ADDBF.idx  case.h.8C30D15B77A97983.idx  checks.h.B649B70A944C2F02.idx  ckd_alloc.c.8A7B2B7F60C80A73.idx  ckd_alloc.h.E1CCB89552BF1765.idx  clapack_lite.h.5139D8D52E9211DF.idx  cmd_ln.c.6A30BADAEDBD703B.idx  cmd_ln.h.245679B4AA65BED1.idx  cmn.c.8D6EE7F927B41487.idx  cmn.h.DF9E018CF7295329.idx  cmn_live.c.20964B052D32A747.idx  compile_assert_c.h.315D305E031ABCA1.idx  config_macro.h.8BB2477C0FB1C600.idx  cross_correlation.c.D19E5A9477D4DAD5.idx  ctstring.h.7E4E18E7E5A2F0B1.idx  ctstring_internal.h.50CC1DC17F90EBCC.idx  dict.c.0C83014D17732A12.idx  (+187 more)
include/: Ai.h
run/: bnr.sh  cmake.sh  run.sh
src/: Ai.cpp  Tobias.py  ai.py  main.cpp
